# smartsheet-sa-prog-excercise

./: .gitignore  README.md  main.py  pyproject.toml
data/: data.csv
demo-vid/: demo.mov
